[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/Menus/Settings Menu.gd" type="Script" id=2]
[ext_resource path="res://interface/Menus/Video Settings Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/Menus/Audio Settings Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/Menus/Crosshair Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/Menus/Keybinds Menu.tscn" type="PackedScene" id=6]

[node name="Settings Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}
default_layer = NodePath("settings container")

[node name="settings container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -216.0
margin_right = 315.0
margin_bottom = 356.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="settings container"]
margin_right = 630.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Gameplay Settings Button" type="Button" parent="settings container"]
margin_top = 72.0
margin_right = 630.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Gameplay Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Controls Settings Button" type="Button" parent="settings container"]
margin_top = 150.0
margin_right = 630.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Controls Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Video Settings Button" type="Button" parent="settings container"]
margin_top = 228.0
margin_right = 630.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Video Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Audio Settings" type="Button" parent="settings container"]
margin_top = 306.0
margin_right = 630.0
margin_bottom = 364.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Audio Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="video settings container" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Audio Settings" parent="." instance=ExtResource( 4 )]
visible = false

[node name="keybinds container" parent="." instance=ExtResource( 6 )]
visible = false

[node name="crosshair menu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="gameplay settings container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -216.0
margin_right = 410.0
margin_bottom = 356.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="gameplay settings container"]
margin_right = 820.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "GAMEPLAY SETTINGS"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Crosshair Button" type="Button" parent="gameplay settings container"]
margin_top = 72.0
margin_right = 820.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Crosshair Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="controls settings container" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -216.0
margin_right = 315.0
margin_bottom = 356.0
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="controls settings container"]
margin_right = 630.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "CONTROLS SETTINGS"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Sensitivity Label" type="Label" parent="controls settings container"]
margin_top = 72.0
margin_right = 630.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 1 )
text = "Sensitivity"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Sensitivity Container" type="HBoxContainer" parent="controls settings container"]
margin_top = 144.0
margin_right = 630.0
margin_bottom = 196.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Slider" type="HSlider" parent="controls settings container/Sensitivity Container"]
margin_left = 80.0
margin_right = 380.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
min_value = 0.1
max_value = 10.0
step = 0.05
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="Readout" type="Label" parent="controls settings container/Sensitivity Container"]
margin_left = 430.0
margin_right = 550.0
margin_bottom = 52.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Keybinds Button" type="Button" parent="controls settings container"]
margin_top = 216.0
margin_right = 630.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Keybinds"
__meta__ = {
"_editor_description_": ""
}

[node name="Behavior Button" type="Button" parent="controls settings container"]
margin_top = 294.0
margin_right = 630.0
margin_bottom = 352.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.858824, 1 )
custom_colors/font_color_pressed = Color( 0.686275, 0, 1, 1 )
text = "Controls Behavior"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="settings container/Gameplay Settings Button" to="." method="_on_Gameplay_Settings_Button_pressed"]
[connection signal="pressed" from="settings container/Controls Settings Button" to="." method="_on_Controls_Settings_Button_pressed"]
[connection signal="pressed" from="settings container/Video Settings Button" to="." method="_on_Video_Settings_Button_pressed"]
[connection signal="pressed" from="settings container/Audio Settings" to="." method="_on_Audio_Settings_pressed"]
[connection signal="pressed" from="gameplay settings container/Crosshair Button" to="." method="_on_Crosshair_Button_pressed"]
[connection signal="value_changed" from="controls settings container/Sensitivity Container/Slider" to="." method="_on_sensitivity_changed"]
[connection signal="pressed" from="controls settings container/Keybinds Button" to="." method="_on_Keybinds_Button_pressed"]
[connection signal="pressed" from="controls settings container/Behavior Button" to="." method="_on_Behavior_Button_pressed"]
